--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ profilePicture = "images/profile.jpg"
 ## Math settings
 [params.math]
 enable = true  # options: true, false. Enable math support globally, default: false. You can always enable math on per page.
-use = "katex"  # options: "katex", "mathjax". default is "katex".
+use = "mathjax"  # options: "katex", "mathjax". default is "katex".
 
 ## Social links
 [[params.socialIcons]]
@@ -29,9 +29,19 @@ title = "Twitter"
 url = "https://twitter.com/izewfktvy"
 
 [[params.socialIcons]]
+icon = "fa-facebook"
+title = "Facebook"
+url = "https://www.facebook.com/profile.php?id=100023692920069"
+
+[[params.socialIcons]]
 icon = "fa-instagram"
 title = "Instagram"
 url = "https://www.instagram.com/izewfktvy533zjmn/"
+
+[[params.socialIcons]]
+icon = "fa-linkedin"
+title = "Linkedin"
+url = "https://www.linkedin.com/in/taichi-soma"
 
 
 
