--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://techblog.on-going.jp/"
+baseURL = "https://techblog.on-going.jp/"
 languageCode = "jp"
 title = "on-going's Tech Blog"
 theme = "anatole"
