change google analytics code

--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "jp"
 title = "on-going's Tech Blog"
 theme = "anatole"
 hasCJKLanguage = true
-googleAnalytics = "G-12R1TRVYLP"
+googleAnalytics = "UA-166112919-1"
 DefaultContentLanguage = "ja"
 
 
